--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Fuse Angular - Angular Template and Starter Kit</title>
+        <title>SMG</title>
         <meta charset="utf-8" />
         <meta
             name="description"
@@ -44,7 +44,7 @@
     <body>
         <!-- Splash screen -->
         <fuse-splash-screen>
-            <img src="images/logo/logo.png" alt="Fuse logo" />
+            <img src="images/logo/logo.png" alt="SMG logo" />
             <div class="spinner">
                 <div class="bounce1"></div>
                 <div class="bounce2"></div>
