--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <body>
         <!-- Splash screen -->
         <fuse-splash-screen>
-            <img src="images/logo/logo.png" alt="SMG logo" />
+            <img src="images/logo/logo.svg" alt="SMG logo" />
             <div class="spinner">
                 <div class="bounce1"></div>
                 <div class="bounce2"></div>
